[Mod Version] Updated mod to Fabric 1.21.4